--- a/feliz-dia-12/src/index.css
+++ b/feliz-dia-12/src/index.css
@@ -62,6 +62,7 @@ button:focus-visible {
   :root {
     color: #213547;
     background-color: #ffffff;
+    justify-items: center;
   }
   a:hover {
     color: #747bff;
